--- a/src/HuntAndPeck/HuntAndPeck.csproj
+++ b/src/HuntAndPeck/HuntAndPeck.csproj
@@ -100,9 +100,7 @@
     <Compile Include="Services\Interfaces\IHintLabelService.cs" />
     <Compile Include="Services\Interfaces\IHintProviderService.cs" />
     <Compile Include="Services\Interfaces\IKeyListenerService.cs" />
-    <Compile Include="Services\KeyListenerService.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Services\KeyListenerService.cs"/>
     <Compile Include="Services\UiAutomationPatternIds.cs" />
     <Compile Include="Services\UiAutomationHintProviderService.cs" />
     <Compile Include="SingleLaunchMutex.cs" />
