--- a/src/NativeMethods/NativeMethods.csproj
+++ b/src/NativeMethods/NativeMethods.csproj
@@ -48,6 +48,7 @@
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="Constants.cs" />
+    <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="HotKeyEventArgs.cs" />
     <Compile Include="Kernel32.cs" />
     <Compile Include="KeyModifier.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RECT.cs" />
     <Compile Include="User32.cs" />
+    <Compile Include="ValueHolder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
